--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,4 +8,96 @@ html {
 
 body {
   font-size: 1.6rem;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Common */
+a {
+  text-decoration: none;
+}
+
+.main-content {
+  width: 1170px;
+  max-width: calc(100% - 48px);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0 20px;
+  min-width: 108px;
+  line-height: 68px;
+  border-radius: 999px;
+  background: #1ebfc1;
+  box-shadow: 0 10px 50px 0 rgba(0, 0, 0, 0.05);
+  text-align: center;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+/* Header */
+.header.fixed {
+  position: sticky;
+  top: -44px;
+  z-index: 1;
+}
+
+.header .body {
+  display: flex;
+  align-items: center;
+  padding: 52px 0 8px;
+}
+
+.header .nav {
+  margin-left: auto;
+}
+
+.header .nav ul {
+  display: flex;
+}
+
+.header .nav li a {
+  padding: 8px 20px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #2f3a3b;
+}
+
+.header .nav li a.active {
+  font-weight: 600;
+}
+
+.header .nav li a.active:hover {
+  text-decoration: none;
+  cursor: default;
+}
+
+.header .nav li a:hover {
+  text-decoration: underline;
+}
+
+.header .actions {
+  margin-left: 157px;
+}
+
+.header .sign-in-btn {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #494949;
+}
+
+.header .sign-up-btn {
+  margin-left: 24px;
+  width: 108px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #1ebfc1;
+  line-height: 48px;
+  border-radius: 6px;
+  background-color: transparent;
+  border: 1px solid currentColor;
 }
