--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -350,3 +350,106 @@ a {
   font-weight: 400;
   line-height: 1.69;
 }
+
+/* Courses */
+.courses {
+  margin-top: 180px;
+}
+
+.courses .body .cta-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.courses .body .cta-group .desc {
+  width: 45%;
+}
+
+.courses .body .cta-group .view-all {
+  color: #1ebfc1;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-decoration-line: underline;
+}
+
+.course-list {
+  margin-top: 79px;
+  display: flex;
+  gap: 47px;
+}
+
+.course-list .item {
+  position: relative;
+  width: calc((100% - (47px * 2)) / 3);
+}
+
+.course-list .item .thumb {
+  display: block;
+  width: 100%;
+  height: 393px;
+  object-fit: cover;
+  border-radius: 8px;
+  opacity: 0.35;
+}
+
+.course-list .item .content {
+  padding: 18px 25px 29px;
+  position: absolute;
+  left: 17px;
+  right: 17px;
+  top: 89.7%;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 16px 90px 0 rgba(0, 0, 0, 0.05);
+}
+
+.course-list .content .title a {
+  color: #0d1111;
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+
+.course-list .content .price {
+  margin-top: 16px;
+  color: #767e7e;
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.course-list .content .price strong {
+  color: #0d1111;
+  font-size: 2.2rem;
+  font-weight: 700;
+}
+
+.course-list .content .desc {
+  margin-top: 6px;
+  color: #9da6a5;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.course-list .sub-info {
+  display: flex;
+  gap: 10px;
+  margin-top: 18px;
+}
+
+.course-list .sub-info span {
+  display: inline-flex;
+  align-items: center;
+  color: #9da6a5;
+  font-size: 1.4rem;
+  font-weight: 400;
+}
+
+.course-list .sub-info span::before {
+  content: "";
+  display: inline-block;
+  margin-right: 10px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #1ebfc1;
+}
